// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check codebases column-offset - eslint should give expected output 1`] = `
"
./example.js
  7:4  error  Cannot resolve name \`test\`. [cannot-resolve-name]  flowtype-errors/show-errors
  7:9  error  Cannot resolve name \`x\`. [cannot-resolve-name]     flowtype-errors/show-errors
  8:6  error  Cannot resolve name \`y\`. [cannot-resolve-name]     flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)
"
`;

exports[`Check codebases coverage-fail - eslint should give expected output 1`] = `
"
./example.js
  1:1  error  Expected coverage to be at least 50%, but is: 0%  flowtype-errors/enforce-min-coverage

✖ 1 problem (1 error, 0 warnings)
"
`;

exports[`Check codebases coverage-fail2 - eslint should give expected output 1`] = `
"
./example.js
  1:1  error  Expected coverage to be at least 50%, but is: 33.33%  flowtype-errors/enforce-min-coverage

✖ 1 problem (1 error, 0 warnings)
"
`;

exports[`Check codebases coverage-ok - eslint should give expected output 1`] = `
"
./example.js
  1:1  error  Expected coverage comment to be within 10% of 55%, but is: 100%  flowtype-errors/enforce-min-coverage-comments-sync

✖ 1 problem (1 error, 0 warnings)
  1 error and 0 warnings potentially fixable with the \`--fix\` option.
"
`;

exports[`Check codebases coverage-ok2 - eslint should give expected output 1`] = `""`;

exports[`Check codebases flow-pragma-1 - eslint should give expected output 1`] = `
"
./example.js
   4:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 3). [incompatible-return]  flowtype-errors/show-errors
   7:6   error  Cannot resolve name \`x\`. [cannot-resolve-name]                                                            flowtype-errors/show-errors
  14:14  error  Cannot perform arithmetic operation because string is not a number. [unsafe-addition]                     flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)
"
`;

exports[`Check codebases flow-pragma-2 - eslint should give expected output 1`] = `
"
./example.js
   6:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 5). [incompatible-return]  flowtype-errors/show-errors
   9:6   error  Cannot resolve name \`x\`. [cannot-resolve-name]                                                            flowtype-errors/show-errors
  16:14  error  Cannot perform arithmetic operation because string is not a number. [unsafe-addition]                     flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)
"
`;

exports[`Check codebases html-support - eslint should give expected output 1`] = `
"
./a.vue
  5:1  error  Parsing error: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>?

  3 | </template>
  4 | 
> 5 | <script>
    | ^
  6 | // @flow
  7 | 
  8 | import B from \\"./b.vue\\";

./b.vue
  5:1  error  Parsing error: Adjacent JSX elements must be wrapped in an enclosing tag. Did you want a JSX fragment <>...</>?

  3 | </template>
  4 | 
> 5 | <script>
    | ^
  6 | export default {};
  7 | </script>
  8 |

✖ 2 problems (2 errors, 0 warnings)
"
`;

exports[`Check codebases libdefs - eslint should give expected output 1`] = `
"
./example.js
  4:8   error  Cannot call \`add\` with \`'2'\` bound to \`b\` because string is incompatible with number (see ./flow-typed/libdef.js:1). [incompatible-call]                                    flowtype-errors/show-errors
  6:21  error  Cannot assign \`Date.now()\` to \`str\` because number (see https://github.com/facebook/flow/blob/v0.139.0/lib/core.js#L1497) is incompatible with string. [incompatible-type]  flowtype-errors/show-errors

✖ 2 problems (2 errors, 0 warnings)
"
`;

exports[`Check codebases no-flow-pragma - eslint should give expected output 1`] = `""`;

exports[`Check codebases project-1 - eslint should give expected output 1`] = `
"
./1.example.js
   5:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 4). [incompatible-return]  flowtype-errors/show-errors
   8:6   error  Cannot resolve name \`x\`. [cannot-resolve-name]                                                            flowtype-errors/show-errors
  15:14  error  Cannot perform arithmetic operation because string is not a number. [unsafe-addition]                     flowtype-errors/show-errors

./2.example.js
   8:24  error  Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at array pattern: [signature-verification-failure]    flowtype-errors/show-errors
   8:26  error  Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]  flowtype-errors/show-errors
  12:6   error  Cannot resolve name \`x\`. [cannot-resolve-name]                                                                                                                                           flowtype-errors/show-errors

./3.example.js
  18:7  error  Parsing error: Identifier 'who' has already been declared

  16 | var str: number = 'hello world!';
  17 | 
> 18 | const who = {};
     |       ^
  19 | 
  20 | moo(str + who);
  21 |

./4.example.js
  26:11  error  Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]  flowtype-errors/show-errors
  27:13  error  Cannot create \`Foo\` element because property \`lastName\` is missing in props but exists in \`Props\` (see line 11). [prop-missing]                                                          flowtype-errors/show-errors
  27:27  error  Cannot create \`Foo\` element because string is incompatible with number (see line 7) in property \`firstName\`. [incompatible-type]                                                         flowtype-errors/show-errors

./5.example.js
  4:29  error  Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]  flowtype-errors/show-errors
  8:3   error  Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see line 4). [incompatible-call]                                                                     flowtype-errors/show-errors

./6.example.js
   8:5  error  Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see line 4). [incompatible-call]                                   flowtype-errors/show-errors
  10:5  error  Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see line 4). [prop-missing]  flowtype-errors/show-errors

./7.example.js
  6:3  error  Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see ./5.example.js:4). [incompatible-call]  flowtype-errors/show-errors

./8.example.js
  6:5  error  Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see ./6.example.js:4). [incompatible-call]                                   flowtype-errors/show-errors
  8:5  error  Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see ./6.example.js:4). [prop-missing]  flowtype-errors/show-errors

./9.example.import.js
  6:68  error  Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]  flowtype-errors/show-errors

./9.example.js
  5:22  error  Cannot resolve module \`react-dom\`. [cannot-resolve-module]                                                                                         flowtype-errors/show-errors
  8:18  error  Cannot create \`Hello\` element because property \`name\` is missing in props but exists in object type (see ./9.example.import.js:6). [prop-missing]  flowtype-errors/show-errors

✖ 20 problems (20 errors, 0 warnings)
"
`;

exports[`Check codebases run-all - eslint should give expected output 1`] = `
"
./.eslintrc.js
  2:24  error  Cannot resolve module \`module\`. [cannot-resolve-module]  flowtype-errors/show-errors

./example.js
   2:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 1). [incompatible-return]  flowtype-errors/show-errors
   5:6   error  Cannot resolve name \`x\`. [cannot-resolve-name]                                                            flowtype-errors/show-errors
  12:14  error  Cannot perform arithmetic operation because string is not a number. [unsafe-addition]                     flowtype-errors/show-errors

✖ 4 problems (4 errors, 0 warnings)
"
`;

exports[`Check codebases run-all-flowdir - eslint should give expected output 1`] = `
"
./subdir/example.js
   2:10  error  Cannot return \`'string'\` because string is incompatible with boolean (see line 1). [incompatible-return]  flowtype-errors/show-errors
   5:6   error  Cannot resolve name \`x\`. [cannot-resolve-name]                                                            flowtype-errors/show-errors
  12:14  error  Cannot perform arithmetic operation because string is not a number. [unsafe-addition]                     flowtype-errors/show-errors

✖ 3 problems (3 errors, 0 warnings)
"
`;

exports[`Check codebases uncovered-example - eslint should give expected output 1`] = `
"
./example.js
   3:7   error  Uncovered expression! Try adding annotations to inform flow of the type  flowtype-errors/uncovered
   9:1   error  Uncovered expression! Try adding annotations to inform flow of the type  flowtype-errors/uncovered
  16:26  error  Uncovered expression! Try adding annotations to inform flow of the type  flowtype-errors/uncovered
  17:14  error  Uncovered expression! Try adding annotations to inform flow of the type  flowtype-errors/uncovered

✖ 4 problems (4 errors, 0 warnings)
"
`;

exports[`Check codebases warnings-all - eslint should give expected output 1`] = `
"
./example.js
  9:22  warning  Unclear type. Using \`any\`, \`Object\`, or \`Function\` types is not safe! [unclear-type]  flowtype-errors/show-warnings

✖ 1 problem (0 errors, 1 warning)
"
`;

exports[`Check codebases warnings-default - eslint should give expected output 1`] = `""`;

exports[`Check codebases warnings-mixed - eslint should give expected output 1`] = `
"
./example.js
  10:22  warning  Unclear type. Using \`any\`, \`Object\`, or \`Function\` types is not safe! [unclear-type]                                      flowtype-errors/show-warnings
  19:10  error    Cannot return \`x.reduce(...) / x.length\` because number is incompatible with string (see line 18). [incompatible-return]  flowtype-errors/show-errors

✖ 2 problems (1 error, 1 warning)
"
`;

exports[`Format 1.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 6,
    "loc": Object {
      "end": Object {
        "column": 17,
        "line": 6,
        "offset": 91,
      },
      "start": Object {
        "column": 10,
        "line": 6,
        "offset": 83,
      },
    },
    "message": "Cannot return \`'string'\` because string is incompatible with boolean (see line 5). [incompatible-return]",
    "start": 6,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 9,
        "offset": 102,
      },
      "start": Object {
        "column": 6,
        "line": 9,
        "offset": 101,
      },
    },
    "message": "Cannot resolve name \`x\`. [cannot-resolve-name]",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 16,
    "loc": Object {
      "end": Object {
        "column": 16,
        "line": 16,
        "offset": 208,
      },
      "start": Object {
        "column": 14,
        "line": 16,
        "offset": 205,
      },
    },
    "message": "Cannot perform arithmetic operation because string is not a number. [unsafe-addition]",
    "start": 16,
    "type": "default",
  },
]
`;

exports[`Format 2.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 24,
        "line": 9,
        "offset": 96,
      },
      "start": Object {
        "column": 24,
        "line": 9,
        "offset": 95,
      },
    },
    "message": "Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at array pattern: [signature-verification-failure]",
    "start": 9,
    "type": "missing-annotation",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 25,
        "line": 9,
        "offset": 97,
      },
      "start": Object {
        "column": 26,
        "line": 9,
        "offset": 97,
      },
    },
    "message": "Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]",
    "start": 9,
    "type": "missing-annotation",
  },
  Object {
    "end": 13,
    "loc": Object {
      "end": Object {
        "column": 6,
        "line": 13,
        "offset": 121,
      },
      "start": Object {
        "column": 6,
        "line": 13,
        "offset": 120,
      },
    },
    "message": "Cannot resolve name \`x\`. [cannot-resolve-name]",
    "start": 13,
    "type": "default",
  },
]
`;

exports[`Format 3.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 5,
    "loc": Object {
      "end": Object {
        "column": 33,
        "line": 5,
        "offset": 71,
      },
      "start": Object {
        "column": 34,
        "line": 5,
        "offset": 71,
      },
    },
    "message": "Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]",
    "start": 5,
    "type": "missing-annotation",
  },
  Object {
    "end": 10,
    "loc": Object {
      "end": Object {
        "column": 20,
        "line": 10,
        "offset": 145,
      },
      "start": Object {
        "column": 10,
        "line": 10,
        "offset": 134,
      },
    },
    "message": "Cannot return \`'undefined'\` because string is incompatible with number (see line 9). [incompatible-return]",
    "start": 10,
    "type": "default",
  },
  Object {
    "end": 14,
    "loc": Object {
      "end": Object {
        "column": 13,
        "line": 14,
        "offset": 207,
      },
      "start": Object {
        "column": 10,
        "line": 14,
        "offset": 203,
      },
    },
    "message": "Cannot return \`some\` because string (see line 13) is incompatible with number (see line 13). [incompatible-return]",
    "start": 14,
    "type": "default",
  },
  Object {
    "end": 17,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 17,
        "offset": 244,
      },
      "start": Object {
        "column": 19,
        "line": 17,
        "offset": 230,
      },
    },
    "message": "Cannot assign \`'hello world!'\` to \`str\` because string is incompatible with number. [incompatible-type]",
    "start": 17,
    "type": "default",
  },
  Object {
    "end": 19,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 19,
        "offset": 259,
      },
      "start": Object {
        "column": 5,
        "line": 19,
        "offset": 251,
      },
    },
    "message": "Cannot call \`moo\` because no arguments are expected by function (see line 9). [extra-arg]",
    "start": 19,
    "type": "default",
  },
  Object {
    "end": 19,
    "loc": Object {
      "end": Object {
        "column": 12,
        "line": 19,
        "offset": 259,
      },
      "start": Object {
        "column": 11,
        "line": 19,
        "offset": 257,
      },
    },
    "message": "Cannot add \`str\` and object literal because object literal is incompatible with number (see line 17). [incompatible-type]",
    "start": 19,
    "type": "default",
  },
]
`;

exports[`Format 4.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 27,
    "loc": Object {
      "end": Object {
        "column": 10,
        "line": 27,
        "offset": 413,
      },
      "start": Object {
        "column": 11,
        "line": 27,
        "offset": 413,
      },
    },
    "message": "Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]",
    "start": 27,
    "type": "missing-annotation",
  },
  Object {
    "end": 28,
    "loc": Object {
      "end": Object {
        "column": 15,
        "line": 28,
        "offset": 431,
      },
      "start": Object {
        "column": 13,
        "line": 28,
        "offset": 428,
      },
    },
    "message": "Cannot create \`Foo\` element because property \`lastName\` is missing in props but exists in \`Props\` (see line 12). [prop-missing]",
    "start": 28,
    "type": "default",
  },
  Object {
    "end": 28,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 28,
        "offset": 448,
      },
      "start": Object {
        "column": 27,
        "line": 28,
        "offset": 442,
      },
    },
    "message": "Cannot create \`Foo\` element because string is incompatible with number (see line 8) in property \`firstName\`. [incompatible-type]",
    "start": 28,
    "type": "default",
  },
]
`;

exports[`Format 5.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 5,
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 5,
        "offset": 66,
      },
      "start": Object {
        "column": 29,
        "line": 5,
        "offset": 66,
      },
    },
    "message": "Cannot build a typed interface for this module. You should annotate the exports of this module with types. Missing type annotation at function return: [signature-verification-failure]",
    "start": 5,
    "type": "missing-annotation",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 9,
        "offset": 93,
      },
      "start": Object {
        "column": 3,
        "line": 9,
        "offset": 90,
      },
    },
    "message": "Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see line 5). [incompatible-call]",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 6.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 9,
        "offset": 113,
      },
      "start": Object {
        "column": 5,
        "line": 9,
        "offset": 109,
      },
    },
    "message": "Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see line 5). [incompatible-call]",
    "start": 9,
    "type": "default",
  },
  Object {
    "end": 11,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 11,
        "offset": 135,
      },
      "start": Object {
        "column": 5,
        "line": 11,
        "offset": 121,
      },
    },
    "message": "Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see line 5). [prop-missing]",
    "start": 11,
    "type": "default",
  },
]
`;

exports[`Format 7.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 5,
        "line": 7,
        "offset": 80,
      },
      "start": Object {
        "column": 3,
        "line": 7,
        "offset": 77,
      },
    },
    "message": "Cannot call \`s\` with \`'4'\` bound to \`x\` because string is incompatible with number (see ./5.example.js:5). [incompatible-call]",
    "start": 7,
    "type": "default",
  },
]
`;

exports[`Format 8.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 7,
    "loc": Object {
      "end": Object {
        "column": 8,
        "line": 7,
        "offset": 85,
      },
      "start": Object {
        "column": 5,
        "line": 7,
        "offset": 81,
      },
    },
    "message": "Cannot call \`foo\` with \`1234\` bound to \`bar\` because number is incompatible with object type (see ./6.example.js:5). [incompatible-call]",
    "start": 7,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 18,
        "line": 9,
        "offset": 107,
      },
      "start": Object {
        "column": 5,
        "line": 9,
        "offset": 93,
      },
    },
    "message": "Cannot call \`foo\` with object literal bound to \`bar\` because property \`baz\` is missing in object literal but exists in object type (see ./6.example.js:5). [prop-missing]",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 9.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 6,
    "loc": Object {
      "end": Object {
        "column": 32,
        "line": 6,
        "offset": 97,
      },
      "start": Object {
        "column": 22,
        "line": 6,
        "offset": 86,
      },
    },
    "message": "Cannot resolve module \`react-dom\`. [cannot-resolve-module]",
    "start": 6,
    "type": "default",
  },
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 22,
        "line": 9,
        "offset": 165,
      },
      "start": Object {
        "column": 18,
        "line": 9,
        "offset": 160,
      },
    },
    "message": "Cannot create \`Hello\` element because property \`name\` is missing in props but exists in object type (see ./9.example.import.js:7). [prop-missing]",
    "start": 9,
    "type": "default",
  },
]
`;

exports[`Format 10.example.js - should have expected properties 1`] = `
Array [
  Object {
    "end": 9,
    "loc": Object {
      "end": Object {
        "column": 9,
        "line": 9,
        "offset": 145,
      },
      "start": Object {
        "column": 5,
        "line": 9,
        "offset": 140,
      },
    },
    "message": "Cannot get \`a.foo\` because: [incompatible-use] Either property \`foo\` is missing in object type (see line 5). Or property \`foo\` is missing in object type (see line 5).",
    "start": 9,
    "type": "default",
  },
]
`;
